# fastIA

./: CMakeLists.txt  LICENSE.txt
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/segment/: CMakeLists.txt
src/segment/cuda/: change_kernel.cu  change_kernel.cuh  global_queue.cu  global_queue_dist.cu  global_queue_float.cu  global_sync.cu
src/segment/test/src/: CMakeLists.txt
